# copier-data-science

./: CHANGELOG.md  Makefile  README.md  RELEASING.md  copier.yml  pyproject.toml  setup.cfg
.claude/: CLAUDE.md  JOURNAL.md
.claude/commands/: release.md
.github/workflows/: integration-tests.yml  tests.yml
docs/docs/: all-options.md  contributing.md  copier-support.md  index.md  opinions.md  related.md  stellars-philosophy.md  using-the-template.md  v1.md  why.md
docs/scripts/: configuration-table.py  generate-termynal.py
scripts/: post_gen.py
template/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
template/docker/: Dockerfile  entrypoint.py
template/docs/mkdocs/: mkdocs.yml
template/docs/mkdocs/docs/: index.md
template/tests/unittest/: test_data.py
template/{{ module_name }}/: __init__.py  config.py  dataset.py  features.py  plots.py
template/{{ module_name }}/modeling/: predict.py  train.py
tests/: conftest.py  env_matrix.py  test_copier.py  test_docker.py
