[project]
name = "copier-data-science"
version = "1.0.61"
description = "A logical, reasonably standardized but flexible project structure for doing and sharing data science work."
authors = [
  { name = "DrivenData", email = "info@drivendata.org" },
  { name = "Stellars Henson", email = "konrad.jelen@gmail.com" },
]
license = "MIT"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "black",
  "copier",
  "flake8",
  "isort",
  "jinja2-time",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-gen-files",
  "mkdocs-include-markdown-plugin",
  "pytest",
  "pytest-xdist",
  "uv",
  "virtualenv",
]

[project.urls]
"Homepage" = "https://github.com/stellarshenson/copier-data-science"
"Source Code" = "https://github.com/stellarshenson/copier-data-science/"
"Bug Tracker" = "https://github.com/stellarshenson/copier-data-science/issues"
"Upstream Project" = "https://cookiecutter-data-science.drivendata.org/"
"DrivenData" = "https://drivendata.co"

[tool.pytest.ini_options]
addopts = "-p no:cookies"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.flake8]
ignore = ["E203", "E402", "E501", "W503"]
max-line-length = 99
