[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = {{ module_name|tojson }}
version = "0.1.0"
description = {{ description|tojson }}
authors = [
    { name = {{ author_name|tojson }} },
]
{% if open_source_license != 'No license file' -%}
license = "{{ open_source_license }}"
{% endif -%}
readme = "README.md"
requires-python = ">={{ python_version_number }}"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
{%- if include_code_scaffold == 'Yes' %}
    "loguru",
    "tqdm",
    "typer",
{%- endif %}
    "python-dotenv",
{%- if dependency_file == 'pyproject.toml' or dependency_file == 'environment.yml' %}
{%- if dataset_storage == 's3' %}
    "botocore",
{%- elif dataset_storage == 'azure' %}
    "azure-storage-blob",
{%- elif dataset_storage == 'gcs' %}
    "google-cloud-storage",
{%- endif %}
{%- if pydata_packages == 'basic' %}
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
{%- endif %}
{%- endif %}
]
{%- if dependency_file == 'pyproject.toml' and environment_manager != 'none' %}

[project.optional-dependencies]
dev = [
    "build",
{%- if jupyter_kernel_support == 'Yes' %}
    "ipykernel",
{%- endif %}
    "ipython",
    "nbdime",
    "pip",
{%- if docs != 'none' %}
    "{{ docs }}",
{%- endif %}
{%- if testing_framework == 'pytest' %}
    "pytest",
    "pytest-cov",
{%- endif %}
    "toml",
{%- if linting_and_formatting == 'ruff' %}
    "ruff",
{%- elif linting_and_formatting == 'flake8+black+isort' %}
    "black",
    "flake8",
    "isort",
{%- endif %}
{%- if dataset_storage == 's3' %}
    "awscli",
{%- elif dataset_storage == 'gcs' %}
    "gsutil",
{%- endif %}
]
{%- endif %}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ module_name }}*"]
exclude = ["tests*"]
{%- if linting_and_formatting == 'flake8+black+isort' %}

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["{{ module_name }}"]
force_sort_within_sections = true
{%- endif %}
{%- if linting_and_formatting == 'ruff' %}

[tool.ruff]
line-length = 99
src = ["{{ module_name }}"]
include = ["pyproject.toml", "{{ module_name }}/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["{{ module_name }}"]
force-sort-within-sections = true
{%- endif %}
